--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body class="page">
     <header class="header">
-      <h1 class="header__title">&lt;/html&gt;</h1>
-      <h2 class="header__subtitle">закрывающий тег</h2>
+      <a class="header__link">&lt;/html&gt;</a>
+      <h1 class="header__title">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -70,7 +70,7 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button" aria-hidden="true">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -103,7 +103,10 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button-animation button">
+            <button
+              type="button"
+              class="card__like-button button-animation button"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -132,7 +135,7 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button" aria-hidden="true">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -165,7 +168,10 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button-animation button">
+            <button
+              type="button"
+              class="card__like-button button-animation button"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -192,7 +198,7 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button" aria-hidden="true">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -225,7 +231,10 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button-animation button">
+            <button
+              type="button"
+              class="card__like-button button-animation button"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -254,7 +263,7 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button" aria-hidden="true">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -287,7 +296,10 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button-animation button">
+            <button
+              type="button"
+              class="card__like-button button-animation button"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -319,7 +331,7 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button" aria-hidden="true">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -352,7 +364,10 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button-animation button">
+            <button
+              type="button"
+              class="card__like-button button-animation button"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -378,7 +393,7 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button" aria-hidden="true">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -411,7 +426,10 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button-animation button">
+            <button
+              type="button"
+              class="card__like-button button-animation button"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -440,7 +458,7 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button" aria-hidden="true">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -473,7 +491,10 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button-animation button">
+            <button
+              type="button"
+              class="card__like-button button-animation button"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -504,7 +525,7 @@
             </p>
           </div>
           <div class="card__like">
-            <button class="card__icon-button">
+            <button type="button" class="card__icon-button" aria-hidden="true">
               <svg
                 class="like-icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -537,32 +558,35 @@
                 />
               </svg>
             </button>
-            <button class="card__like-button button-animation button">
+            <button
+              type="button"
+              class="card__like-button button-animation button"
+            >
               <span class="button__text">Like</span>
             </button>
           </div>
         </article>
       </section>
-    </main>
-    <footer class="footer">
-      <button
-        class="footer__button button-animation"
-        type="button"
-        onclick="window['dialog-id'].showModal()"
-        aria-controls="dialog-id"
-      >
-        <svg
-          class="footer__svg"
-          xmlns="http://www.w3.org/2000/svg"
-          width="21"
-          height="21"
-          viewBox="0 0 21 21"
+      <div class="footer">
+        <button
+          class="footer__button button-animation"
+          type="button"
+          onclick="window['dialog-id'].showModal()"
+          aria-controls="dialog-id"
         >
-          <use href="./svg/floppy.svg#floppy"></use>
-        </svg>
-        <span class="button__text">Сохранить на память</span>
-      </button>
-    </footer>
+          <svg
+            class="footer__svg"
+            xmlns="http://www.w3.org/2000/svg"
+            width="21"
+            height="21"
+            viewBox="0 0 21 21"
+          >
+            <use href="./svg/floppy.svg#floppy"></use>
+          </svg>
+          <span class="button__text">Сохранить на&nbsp;память</span>
+        </button>
+      </div>
+    </main>
     <dialog id="dialog-id">
       <form method="dialog" class="dialog">
         <div class="dialog__content">
@@ -577,7 +601,9 @@
           </svg>
           <p class="dialog__description">Вставьте дискету, чтобы продолжить</p>
         </div>
-        <button class="dialog__button button-animation"><span class="button__text">ок</span></button>
+        <button type="button" class="dialog__button button-animation">
+          <span class="button__text">ок</span>
+        </button>
       </form>
     </dialog>
     <script src="./scripts/set-theme.js"></script>
